Grid section refactor

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <nav class="nav-bar debug">
+      <nav class="nav-bar">
         <img src="./image/logo.png" alt="" />
         <button class="btn-consultation btn-black">Free Consultation</button>
       </nav>
@@ -23,14 +23,18 @@
         <div class="grid-box outer-boxes outer-box-1">Graphic Design</div>
         <div class="grid-box outer-boxes outer-box-2">
           <div class="grid-box inner-row-1">
-            <div class="grid-box inner-top-right">UI/UX</div>
-            <div class="grid-box inner-top-left">Apps</div>
+            <div class="grid-box inner-boxes inner-top-right">UI/UX</div>
+            <div class="grid-box inner-boxes inner-top-left">Apps</div>
           </div>
-          <div class="grid-box inner-row-2">Illustrations</div>
+          <div class="grid-box inner-boxes inner-row-2">Illustrations</div>
         </div>
         <div class="grid-box outer-boxes outer-box-3">
-          <div class="grid-box inner-row-1 md-col-1">Photography</div>
-          <div class="grid-box inner-row-2 md-col-2">Motion Graphics</div>
+          <div class="grid-box inner-boxes inner-row-1 md-col-1">
+            Photography
+          </div>
+          <div class="grid-box inner-boxes inner-row-2 md-col-2">
+            Motion Graphics
+          </div>
         </div>
       </section>
     </div>
